syntax = "proto3";

option java_package = "org.github.felipegutierrez.explore.grpc.calculator";
option java_multiple_files = true;
option java_outer_classname = "CalculatorProto";
option cc_generic_services = true;
option java_generic_services = true;

message SourceNumber {
  int64 value = 1;
}
message PrimeNumberRequest {
  SourceNumber sourceNumber = 1;
}
message PrimeNumberManyTimesResponse {
  string result = 1;
}

message AverageRequest {
  int32 value = 1;
}
message AverageResponse {
  double result = 1;
}

message MaximumRequest {
  int32 value = 1;
}
message MaximumResponse {
  int32 result = 1;
}

service CalculatorService {
  // gRPC Server streaming
  rpc Decomposite(PrimeNumberRequest) returns (stream PrimeNumberManyTimesResponse) {};
  // gRPC Client streaming
  rpc LongAverage(stream AverageRequest) returns (AverageResponse) {};
  // gRPC BiDirectional streaming
  rpc FindMaximum(stream MaximumRequest) returns (stream MaximumResponse) {};
}
